<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.popularmovies.DetailActivity">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="342dp"
            android:layout_height="342dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/contentDescriptionMovieImage"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/original_title_detail"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/plot_synopsis_detail"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_plot_sysnopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/release_date_detail"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/user_rating_detail"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>